--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-                    <a class="ani_span" href="">
+                    <a class="ani_span" href="www.facebook.com">
                         <img class="img_top" src="Images/fb-art.png" alt="">
                     </a>
                     <a class="ani_span" href="">
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
                     <p id="header_text">
-                        Millions of people's life has changed, millions more awaiting your donation
+                        Millions of people's life has changed, millions more awaiting for your donations
                     </p>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
