--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-                    <a class="ani_span" href="www.facebook.com">
+                    <a class="ani_span" href="https://www.facebook.com">
                         <img class="img_top" src="Images/fb-art.png" alt="">
                     </a>
                     <a class="ani_span" href="">
